crates/nuzo-class-macros/tests/ui/class_unknown_arg.stderr
error: unknown `class` argument; expected one of: debug, default, clone
 --> tests/ui/class_unknown_arg.rs:3:1
  |
3 | #[class(serialize)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `class` (in Nightly builds, run with -Z macro-backtrace for more info)
