crates/nuzo-class-macros/tests/ui/class_unknown_arg.rs
use nuzo_class_macros::class;

#[class(serialize)]
struct Foo {
    x: i32,
}

fn main() {}
